kubernetes/dbdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aakasha-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aakasha-db
  template:
    metadata:
      labels:
        app: aakasha-db
    spec:
      containers:
      - name: aakasha-db
        image: koushaldev/aakasha-db:v1
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: aakasha-db-data
        ports:
        - name: aakasha-db-port
          containerPort: 3306
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      volumes:
      - name: aakasha-db-data
        persistentVolumeClaim:
          claimName: aakashadb-pvc-claim
