kubernetes/frontenddeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: Aakasha-frontend
spec:
  replicas: 2  
  selector:
    matchLabels:
      app: Aakasha-frontend
  template:
    metadata:
      labels:
        app: Aakasha-frontend
    spec:
      containers:
      - name: Aakasha-frontend
        image: koushaldev/aakasha-frontend:v1  
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
         - name: Aakasha-frontend-port
           containerPort: 3000
