kubernetes/backendservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: aakasha-backend
spec:
  selector:
    app: Aakasha-backend
  ports:
  - port: 4000
    targetPort: Aakasha-backend-port
  type: ClusterIP
