kubernetes/dbservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: localhost
spec:
  selector:
    app: aakasha-db
  ports:
  - port: 3306
    targetPort: aakasha-db-port
    protocol: TCP
  type: ClusterIP
